...
        name="peso"
        options={{ title: 'Peso', tabBarIcon: tabIcon('scale', 'scale-outline') }}
      />
      <Tabs.Screen
        name="configuracoes"
        options={{
          title: 'Ajustes',
          tabBarIcon: tabIcon('settings', 'settings-outline'),
        }}
      />
    </Tabs>
  );
}
...
